# chamneul

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README_AIUSAGE.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml
accounts/: admin.py  managers.py  models.py
accounts/migrations/: 0001_initial.py  0002_googleidentity_rolegrant_userrole.py
advice/: admin.py  models.py
advice/migrations/: 0001_initial.py
advisors/: admin.py  models.py
advisors/migrations/: 0001_initial.py
common/: taxonomy.py  uuid7.py
concerns/: admin.py  apps.py  managers.py  models.py
concerns/migrations/: 0001_initial.py
config/: health.py  urls.py
config/settings/: base.py  local.py  prod.py  test.py
docs/: 1 서비스기획_v1.md  2 mvp-scope_v1.md  README.md  README_AIUSAGE.md  api.md  model.md  컨셉추얼 아키텍처_초안.drawio
docs/adr/: ADR-001-local-container-architecture.md  ADR-002-session-authentication-policy.md  ADR-003-admin-role-grant.md  ADR-004-strategy-doc-visibility-split.md
docs/learning/: 01-api-to-model-and-docker.md  02-ai-collaboration-and-ownership-strategy.md
docs/request/: 1-onboarding_prompt.md  2-Notion-first_API 명세 검토_prompt.md
docs/reviews/: 01-milestone1-skeleton.md  02-milestone2-definition.md  02-milestone2-review.md  03-milestone3-definition.md
docs/ux/: 01-phase2-screen-flows.md
notifications/: admin.py  models.py
notifications/migrations/: 0001_initial.py
