# (IL:임베디드 학습용 주석)
# (IL) 서비스 운영에 꼭 필요한 기본 패키지
[project]
name = "chamneul"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.15",
    "psycopg[binary]>=3.1",
    "python-dotenv>=1.2.2",
    "uuid-utils>=0.9",
]

# (IL) 개발자 전용 도구. 운영 이미지에서는 `uv sync --no-dev`로 제외된다(Dockerfile 참조).
# 테스트는 Django 기본 test runner를 사용하므로 pytest 등 별도 테스트 패키지는 도입하지 않는다(CLAUDE.md §12).
[dependency-groups]
dev = [
    "ruff>=0.8",
]

[tool.ruff]
# 운영/CI/로컬 동일 기준. 가상환경과 마이그레이션 자동생성 코드는 검사 대상에서 제외.
line-length = 100
target-version = "py313"
extend-exclude = ["**/migrations/*"]

[tool.ruff.lint]
# E/F: pyflakes+pycodestyle, I: import 정렬, UP: 최신 문법, DJ: Django 관용 규칙.
select = ["E", "F", "I", "UP", "DJ"]